--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
           </div>
         </div>
       </nav>
-    </header>
-    <main>
-      <!-- top header area start -->
+      <!-- image slider start -->
       <section class="container">
         <div
           id="carouselExampleControls"
@@ -63,25 +61,64 @@
         >
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img
-                src="images/banner-images/tv.png"
-                class="d-block w-100"
-                alt="LED"
-              />
+              <div class="row p-5 d-flex align-items-center">
+                <div class="col-lg-7">
+                  <h1>Cool Dude Headphone</h1>
+                  <p>
+                    This is the best headphone in the world for people who just
+                    want to waste time in front of funky world.
+                  </p>
+                  <h1>$420</h1>
+                  <button class="btn btn-warning">Buy Now</button>
+                </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/headphone.png"
+                    class="d-block w-100"
+                    alt="headphone"
+                  />
+                </div>
+              </div>
             </div>
             <div class="carousel-item">
-              <img
-                src="images/banner-images/xbox.png"
-                class="d-block w-100"
-                alt="xbox"
-              />
+               <div class="row p-5 d-flex align-items-center">
+                  <div class="col-lg-7">
+                    <h1>Mega LCD TV For Sports
+                  </h1>
+                    <p>
+                     This is the best tv in the world for people who just want to waste time in front of tv.
+                    </p>
+                    <h1>$1200</h1>
+                    <button class="btn btn-warning">Buy Now</button>
+                  </div>
+                  <div class="col-lg-5">
+                    <img
+                      src="images/banner-images/tv.png"
+                      class="d-block w-100"
+                      alt="headphone"
+                    />
+                  </div>
+                </div>
             </div>
             <div class="carousel-item">
-              <img
-                src="images/banner-images/headphone.png"
-                class="d-block w-100"
-                alt="headphone"
-              />
+               <div class="row p-5 d-flex align-items-center">
+                  <div class="col-lg-7">
+                    <h1>X-Box for your living room
+                  </h1>
+                    <p>
+                     This is the best x-box in the world for people who just want to waste time in front of fake sports.
+                    </p>
+                    <h1>$600</h1>
+                    <button class="btn btn-warning">Buy Now</button>
+                  </div>
+                  <div class="col-lg-5">
+                    <img
+                      src="images/banner-images/xbox.png"
+                      class="d-block w-100"
+                      alt="headphone"
+                    />
+                  </div>
+                </div>
             </div>
           </div>
           <button
@@ -105,8 +142,9 @@
         </div>
       </section>
 
-      <!-- top header area end -->
-    </main>
+      <!-- image slider end -->
+    </header>
+    <main></main>
 
     <footer></footer>
 
