--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
           </div>
         </div>
       </nav>
+
       <!-- image slider start -->
+
       <section class="container">
         <div
           id="carouselExampleControls"
@@ -61,7 +63,7 @@
         >
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="row p-5 d-flex align-items-center">
+              <div class="row p-5 d-flex align-items-center" id="img-slider">
                 <div class="col-lg-7">
                   <h1>Cool Dude Headphone</h1>
                   <p>
@@ -81,44 +83,44 @@
               </div>
             </div>
             <div class="carousel-item">
-               <div class="row p-5 d-flex align-items-center">
-                  <div class="col-lg-7">
-                    <h1>Mega LCD TV For Sports
-                  </h1>
-                    <p>
-                     This is the best tv in the world for people who just want to waste time in front of tv.
-                    </p>
-                    <h1>$1200</h1>
-                    <button class="btn btn-warning">Buy Now</button>
-                  </div>
-                  <div class="col-lg-5">
-                    <img
-                      src="images/banner-images/tv.png"
-                      class="d-block w-100"
-                      alt="headphone"
-                    />
-                  </div>
+              <div class="row p-5 d-flex align-items-center" id="img-slider">
+                <div class="col-lg-7">
+                  <h1>Mega LCD TV For Sports</h1>
+                  <p>
+                    This is the best tv in the world for people who just want to
+                    waste time in front of tv.
+                  </p>
+                  <h1>$1200</h1>
+                  <button class="btn btn-warning">Buy Now</button>
                 </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/tv.png"
+                    class="d-block w-100"
+                    alt="headphone"
+                  />
+                </div>
+              </div>
             </div>
             <div class="carousel-item">
-               <div class="row p-5 d-flex align-items-center">
-                  <div class="col-lg-7">
-                    <h1>X-Box for your living room
-                  </h1>
-                    <p>
-                     This is the best x-box in the world for people who just want to waste time in front of fake sports.
-                    </p>
-                    <h1>$600</h1>
-                    <button class="btn btn-warning">Buy Now</button>
-                  </div>
-                  <div class="col-lg-5">
-                    <img
-                      src="images/banner-images/xbox.png"
-                      class="d-block w-100"
-                      alt="headphone"
-                    />
-                  </div>
+              <div class="row p-5 d-flex align-items-center" id="img-slider">
+                <div class="col-lg-7">
+                  <h1>X-Box for your living room</h1>
+                  <p>
+                    This is the best x-box in the world for people who just want
+                    to waste time in front of fake sports.
+                  </p>
+                  <h1>$600</h1>
+                  <button class="btn btn-warning">Buy Now</button>
                 </div>
+                <div class="col-lg-5">
+                  <img
+                    src="images/banner-images/xbox.png"
+                    class="d-block w-100"
+                    alt="headphone"
+                  />
+                </div>
+              </div>
             </div>
           </div>
           <button
@@ -144,7 +146,33 @@
 
       <!-- image slider end -->
     </header>
-    <main></main>
+
+    <main>
+       <!-- Categories start -->
+       <section class="container my-5">
+            <div class="row g-4">
+              <div class="col-lg-4">
+                <div class="p-3 border d-flex align-items-center justify-content-between rounded-3" id="bag">
+                   <h1 class="text-white">Bag</h1>
+                   <img src="images/categories/bag.png" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="p-3 border d-flex align-items-center justify-content-between rounded-3" id="shoes">
+                  <h1 class="text-white">Shoes</h1>
+                  <img src="images/categories/shoes.png" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="p-3 border d-flex align-items-center justify-content-between rounded-3" id="watch">
+                  <h1 class="text-white">Watch</h1>
+                  <img src="images/categories/watch.png" alt="">
+                </div>
+              </div>
+            </div>
+       </section>
+       <!-- Categories end -->
+    </main>
 
     <footer></footer>
 
