--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     want to waste time in front of funky world.
                   </p>
                   <h1>$420</h1>
-                  <button class="btn btn-warning">Buy Now</button>
+                  <button class="btn">Buy Now</button>
                 </div>
                 <div class="col-lg-5">
                   <img
@@ -91,7 +91,7 @@
                     waste time in front of tv.
                   </p>
                   <h1>$1200</h1>
-                  <button class="btn btn-warning">Buy Now</button>
+                  <button class="btn">Buy Now</button>
                 </div>
                 <div class="col-lg-5">
                   <img
@@ -111,7 +111,7 @@
                     to waste time in front of fake sports.
                   </p>
                   <h1>$600</h1>
-                  <button class="btn btn-warning">Buy Now</button>
+                  <button class="btn">Buy Now</button>
                 </div>
                 <div class="col-lg-5">
                   <img
@@ -148,33 +148,189 @@
     </header>
 
     <main>
-       <!-- Categories start -->
-       <section class="container my-5">
-            <div class="row g-4">
-              <div class="col-lg-4">
-                <div class="p-3 border d-flex align-items-center justify-content-between rounded-3" id="bag">
-                   <h1 class="text-white">Bag</h1>
-                   <img src="images/categories/bag.png" alt="">
-                </div>
+      <!-- Categories start -->
+      <section class="container my-5">
+        <div class="row g-4">
+          <div class="col-lg-4">
+            <div
+              class="p-3 border d-flex align-items-center justify-content-between rounded-3"
+              id="bag"
+            >
+              <h1 class="text-white">Bag</h1>
+              <img src="images/categories/bag.png" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div
+              class="p-3 border d-flex align-items-center justify-content-between rounded-3"
+              id="shoes"
+            >
+              <h1 class="text-white">Shoes</h1>
+              <img src="images/categories/shoes.png" alt="" />
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div
+              class="p-3 border d-flex align-items-center justify-content-between rounded-3"
+              id="watch"
+            >
+              <h1 class="text-white">Watch</h1>
+              <img src="images/categories/watch.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Categories end -->
+
+      <!-- Shoes srction added -->
+      <section class="container">
+        <h2>Shoes</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card border-0 h-100 shadow-lg">
+              <img
+                src="images/shoes/shoe-1.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional.
+                </p>
+                <h2>$500</h2>
               </div>
-              <div class="col-lg-4">
-                <div class="p-3 border d-flex align-items-center justify-content-between rounded-3" id="shoes">
-                  <h1 class="text-white">Shoes</h1>
-                  <img src="images/categories/shoes.png" alt="">
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="p-3 border d-flex align-items-center justify-content-between rounded-3" id="watch">
-                  <h1 class="text-white">Watch</h1>
-                  <img src="images/categories/watch.png" alt="">
-                </div>
+              <div class="m-3">
+                <button class="btn">Buy Now</button>
               </div>
             </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 h-100 shadow-lg">
+              <img
+                src="images/shoes/shoe-2.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">
+                  This card has supporting text below as a natural lead-in to additional content.
+                </p>
+                <h2>$400</h2>
+              </div>
+              <div class="m-3">
+                <button class="btn">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 h-100 shadow-lg">
+              <img
+                src="images/shoes/shoe-3.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural lead-in to additional.
+                </p>
+                <h2>$300</h2>
+              </div>
+              <div class="m-3">
+                <button class="btn">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Shoes section end -->
+
+      <!-- Bag srction added -->
+      <section class="container my-5">
+         <h2>Bags</h2>
+         <div class="row row-cols-1 row-cols-md-3 g-4">
+           <div class="col">
+             <div class="card border-0 h-100 shadow-lg">
+               <img
+                 src="images/bags/bag-1.png"
+                 class="card-img-top"
+                 alt="..."
+               />
+               <div class="card-body">
+                 <h5 class="card-title">Red Laltu Bag</h5>
+                 <p class="card-text">
+                   This is a longer card with supporting text below as a natural
+                   lead-in to additional.
+                 </p>
+                 <h2>$1800</h2>
+               </div>
+               <div class="m-3">
+                 <button class="btn">Buy Now</button>
+               </div>
+             </div>
+           </div>
+           <div class="col">
+             <div class="card border-0 h-100 shadow-lg">
+               <img
+                 src="images/bags/bag-2.png"
+                 class="card-img-top"
+                 alt="..."
+               />
+               <div class="card-body">
+                 <h5 class="card-title">Blue Niltu Bag</h5>
+                 <p class="card-text">
+                   This card has supporting text below as a natural lead-in to additional content.
+                 </p>
+                 <h2>$1400</h2>
+               </div>
+               <div class="m-3">
+                 <button class="btn">Buy Now</button>
+               </div>
+             </div>
+           </div>
+           <div class="col">
+             <div class="card border-0 h-100 shadow-lg">
+               <img
+                 src="images/bags/bag-3.png"
+                 class="card-img-top"
+                 alt="..."
+               />
+               <div class="card-body">
+                 <h5 class="card-title">Black Kaltu Bag</h5>
+                 <p class="card-text">
+                   This is a wider card with supporting text below as a natural lead-in to additional.
+                 </p>
+                 <h2>$1200</h2>
+               </div>
+               <div class="m-3">
+                 <button class="btn">Buy Now</button>
+               </div>
+             </div>
+           </div>
+         </div>
        </section>
-       <!-- Categories end -->
+       <!-- Bag section end -->
+
+       <!-- Subcribe section end -->
+       <section class="container d-flex justify-content-center align-items-center rounded-3" id="subcribe">
+          <div>
+            <h1>Eta te Email Deo</h1>
+            <p>Email deo na hoy khobor ache</p>
+            <input type="text">
+            <br>
+            <button class="btn">Submit</button>
+          </div>
+       </section>
+       <!-- Subcribe section end -->
     </main>
 
-    <footer></footer>
+    <footer class="mt-5 text-center">
+       <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+
+    </footer>
 
     <!-- add bootstrap js bundle  -->
     <script
