--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <!-- Start Heading srction and add navbar  -->
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#">
             <img src="images/logo.png" alt="" />
@@ -40,13 +40,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Shoes</a>
+                <a class="nav-link" href="#shoe">Shoes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Backpack</a>
+                <a class="nav-link" href="#backpack">Backpack</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Subscribe</a>
+                <a class="nav-link" href="#subcribe">Subscribe</a>
               </li>
             </ul>
           </div>
@@ -183,7 +183,7 @@
       <!-- Categories end -->
 
       <!-- Shoes srction added -->
-      <section class="container">
+      <section class="container" id="shoe">
         <h2>Shoes</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
@@ -249,7 +249,7 @@
       <!-- Shoes section end -->
 
       <!-- Bag srction added -->
-      <section class="container my-5">
+      <section class="container my-5" id="backpack">
          <h2>Bags</h2>
          <div class="row row-cols-1 row-cols-md-3 g-4">
            <div class="col">
