--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           <div>
             <h1>Eta te Email Deo</h1>
             <p>Email deo na hoy khobor ache</p>
-            <input type="text">
+            <input class="form-control" type="text">
             <br>
             <button class="btn">Submit</button>
           </div>
