--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
       <!-- Shoes srction added -->
       <section class="container" id="shoe">
-        <h2>Shoes</h2>
+        <h2 class="change-color">Shoes</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card border-0 h-100 shadow-lg">
@@ -216,7 +216,8 @@
               <div class="card-body">
                 <h5 class="card-title">Nike 360</h5>
                 <p class="card-text">
-                  This card has supporting text below as a natural lead-in to additional content.
+                  This card has supporting text below as a natural lead-in to
+                  additional content.
                 </p>
                 <h2>$400</h2>
               </div>
@@ -235,7 +236,8 @@
               <div class="card-body">
                 <h5 class="card-title">Red Airmax</h5>
                 <p class="card-text">
-                  This is a wider card with supporting text below as a natural lead-in to additional.
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional.
                 </p>
                 <h2>$300</h2>
               </div>
@@ -250,86 +252,82 @@
 
       <!-- Bag srction added -->
       <section class="container my-5" id="backpack">
-         <h2>Bags</h2>
-         <div class="row row-cols-1 row-cols-md-3 g-4">
-           <div class="col">
-             <div class="card border-0 h-100 shadow-lg">
-               <img
-                 src="images/bags/bag-1.png"
-                 class="card-img-top"
-                 alt="..."
-               />
-               <div class="card-body">
-                 <h5 class="card-title">Red Laltu Bag</h5>
-                 <p class="card-text">
-                   This is a longer card with supporting text below as a natural
-                   lead-in to additional.
-                 </p>
-                 <h2>$1800</h2>
-               </div>
-               <div class="m-3">
-                 <button class="btn">Buy Now</button>
-               </div>
-             </div>
-           </div>
-           <div class="col">
-             <div class="card border-0 h-100 shadow-lg">
-               <img
-                 src="images/bags/bag-2.png"
-                 class="card-img-top"
-                 alt="..."
-               />
-               <div class="card-body">
-                 <h5 class="card-title">Blue Niltu Bag</h5>
-                 <p class="card-text">
-                   This card has supporting text below as a natural lead-in to additional content.
-                 </p>
-                 <h2>$1400</h2>
-               </div>
-               <div class="m-3">
-                 <button class="btn">Buy Now</button>
-               </div>
-             </div>
-           </div>
-           <div class="col">
-             <div class="card border-0 h-100 shadow-lg">
-               <img
-                 src="images/bags/bag-3.png"
-                 class="card-img-top"
-                 alt="..."
-               />
-               <div class="card-body">
-                 <h5 class="card-title">Black Kaltu Bag</h5>
-                 <p class="card-text">
-                   This is a wider card with supporting text below as a natural lead-in to additional.
-                 </p>
-                 <h2>$1200</h2>
-               </div>
-               <div class="m-3">
-                 <button class="btn">Buy Now</button>
-               </div>
-             </div>
-           </div>
-         </div>
-       </section>
-       <!-- Bag section end -->
-
-       <!-- Subcribe section end -->
-       <section class="container d-flex justify-content-center align-items-center rounded-3" id="subcribe">
-          <div>
-            <h1>Eta te Email Deo</h1>
-            <p>Email deo na hoy khobor ache</p>
-            <input class="form-control" type="text">
-            <br>
-            <button class="btn">Submit</button>
+        <h2>Bags</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card border-0 h-100 shadow-lg">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Red Laltu Bag</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional.
+                </p>
+                <h2>$1800</h2>
+              </div>
+              <div class="m-3">
+                <button class="btn">Buy Now</button>
+              </div>
+            </div>
           </div>
-       </section>
-       <!-- Subcribe section end -->
+          <div class="col">
+            <div class="card border-0 h-100 shadow-lg">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Blue Niltu Bag</h5>
+                <p class="card-text">
+                  This card has supporting text below as a natural lead-in to
+                  additional content.
+                </p>
+                <h2>$1400</h2>
+              </div>
+              <div class="m-3">
+                <button class="btn">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card border-0 h-100 shadow-lg">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Black Kaltu Bag</h5>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional.
+                </p>
+                <h2>$1200</h2>
+              </div>
+              <div class="m-3">
+                <button class="btn">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Bag section end -->
+
+      <!-- Subcribe section end -->
+      <section
+        class="container d-flex justify-content-center align-items-center rounded-3"
+        id="subcribe"
+      >
+        <div>
+          <h1>Eta te Email Deo</h1>
+          <p>Email deo na hoy khobor ache</p>
+          <input class="form-control" type="text" />
+          <br />
+          <button class="btn">Submit</button>
+        </div>
+      </section>
+      <!-- Subcribe section end -->
     </main>
 
     <footer class="mt-5 text-center">
-       <p><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
-
+      <p>
+        <small
+          >©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small
+        >
+      </p>
     </footer>
 
     <!-- add bootstrap js bundle  -->
@@ -338,5 +336,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <!-- add js extarnal file -->
+    <script src="app.js"></script>
   </body>
 </html>
